Fix for build fails for #584